--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,4 +1,3 @@
-# ---- core module: stv_core ----
 add_library(stv_core STATIC
     src/task.cpp
     src/cancel_token.cpp
@@ -10,11 +9,11 @@ add_library(stv_core STATIC
 target_include_directories(stv_core
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
+    PRIVATE
+        ${PROJECT_SOURCE_DIR}/infra/include
 )
 
-target_link_libraries(stv_core
-    PUBLIC
-        stv_infra
-)
-
+# Avoid circular link with stv_infra.
+# core only needs infra headers (ILogger interface) at compile time.
 target_compile_features(stv_core PUBLIC cxx_std_17)
+set_project_warnings(stv_core)
