[M2] 全链路闭环：消除循环依赖 + 真实 Stage 接入 + 服务端骨架
架构重构：
- 将 ILogger 接口从 infra 迁移到 core，消除 core↔infra 循环依赖
- 拆分 infra 为 infra_base（Logger）和 infra_net（HTTP+Stages）
- core 不再依赖 infra，依赖方向：app→core+infra，infra_net→core+infra_base

新增功能：
- 真实 Stage 实现（StoryboardStage/ImageGenStage/TtsStage/ComposeStage）
- StageFactory 工厂类，main.cpp 完整接线 HTTP→Stage→WorkflowEngine
- XDG 路径管理（config.h）
- libcurl 缺失时的 Stub 实现（curl_http_client_stub.cpp）
- Python FastAPI 服务端骨架（MockProvider + LocalGpuProvider）

测试改进：
- curl_http_client_test 替换外部 httpbin.org 为本地回环 LocalHttpServer
- http_client_test 补全所有 TODO 测试用例（重试/取消/指数退避验证）

文档：README.md 全面更新，新增 M2_ACCEPTANCE.md / OBSERVABILITY.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ endif()
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/CompilerWarnings.cmake)
 
+# ---- Sub-projects (dependency order: infra_base + core → infra_net → app) ----
 add_subdirectory(core)
 add_subdirectory(infra)
 
