[M3] ThreadPoolScheduler：DAG 调度 + 资源预算 + 防饥饿 + 暂停/恢复
核心实现：
- ThreadPoolScheduler（867 行）：多线程工作池、DAG 依赖唤醒、CPU 硬门禁、
  RAM/VRAM 软门禁（逃逸规则防永久阻塞）、指数 aging 防饥饿
- 协作式 pause/resume（progress callback checkpoint）、超时自动取消
- WorkflowEngine.start_workflow() 返回 Result，失败时回滚所有已提交任务
- main.cpp 支持 simple/threadpool 切换，auto_worker_count()+parse_env_int() 参数校验

配置（环境变量）：
- STV_SCHEDULER=threadpool|simple
- STV_SCHED_WORKERS, STV_SCHED_CPU_SLOTS, STV_SCHED_RAM_MB_SOFT
- STV_SCHED_VRAM_MB_SOFT, STV_SCHED_AGING_INTERVAL_MS, STV_SCHED_AGING_BOOST
- STV_SCHED_PAUSE_TIMEOUT_MS

测试：
- 12 个单元测试（test_thread_pool_scheduler）：DAG、资源、aging、pause、并发竞争
- 2 个集成测试（test_orchestrator）：start_workflow 回滚 + 成功路径
- task_state_machine 补充测试

工程：
- spdlog 支持 FetchContent fallback（STV_USE_SYSTEM_SPDLOG=OFF 时自动下载）
- .gitignore 补充 __pycache__、venv、build-test、本地基准数据
- 文档：M3_SCHEDULER_DESIGN.md + M3_perf.md
- 基准脚本：scripts/bench_m3.py（simple vs threadpool 对比）

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 build/
+build-test/
 cmake-build-*/
 *.user
 *.log
 *.tmp
+
+# Python
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+
+# Local benchmark data (not checked in)
+bench.json
+bench_gpu.json
+docs/reports/m3_simple.json
+docs/reports/m3_threadpool.json
+docs/reports/m3_bench.json
