--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(stv_core STATIC
     src/task.cpp
     src/cancel_token.cpp
     src/scheduler.cpp
+    src/thread_pool_scheduler.cpp
     src/pipeline.cpp
     src/orchestrator.cpp
 )
@@ -9,11 +10,8 @@ add_library(stv_core STATIC
 target_include_directories(stv_core
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
-    PRIVATE
-        ${PROJECT_SOURCE_DIR}/infra/include
 )
 
-# Avoid circular link with stv_infra.
-# core only needs infra headers (ILogger interface) at compile time.
+# core stays infra-independent (pure C++ orchestration/scheduling).
 target_compile_features(stv_core PUBLIC cxx_std_17)
 set_project_warnings(stv_core)
